data/usersCode/fdvdfgdr/question1/error.txt
/home/gauravghati/clash/data/usersCode/fdvdfgdr/question1/code1-0.cpp:1:1: error: ‘fd’ does not name a type
 fd fverfververer evrcewv
 ^~
